force-app/main/default/objects/Industry__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>For future enhancements</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>