force-app/main/default/objects/Industry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact</label>
    <type>Checkbox</type>
</CustomField>