force-app/main/default/objects/Industry__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engagement</label>
    <type>Checkbox</type>
</CustomField>