force-app/main/default/objects/Industry__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expenses</label>
    <type>Checkbox</type>
</CustomField>