force-app/main/default/objects/Industry__c/fields/FSC__c.field-meta.xml
<CustomField>
    <fullName>FSC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSC</label>
    <type>Checkbox</type>
</CustomField>