force-app/main/default/objects/Industry__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC - Augmenting Sector Coverage</fullName>
            </value>
            <value>
                <fullName>BUS - Business Services</fullName>
            </value>
            <value>
                <fullName>BUS - Facilities Management</fullName>
            </value>
            <value>
                <fullName>CFR - Consumer Food &amp; Retail</fullName>
            </value>
            <value>
                <fullName>CM - Capital Markets</fullName>
            </value>
            <value>
                <fullName>CMG - Capital Markets</fullName>
            </value>
            <value>
                <fullName>CORP - Corporate</fullName>
            </value>
            <value>
                <fullName>CVAS - Corporate Valuation Advisory Services</fullName>
            </value>
            <value>
                <fullName>DDS - Due Diligence Services</fullName>
            </value>
            <value>
                <fullName>Dist - Distribution</fullName>
            </value>
            <value>
                <fullName>DR - Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Eur - Europe</fullName>
            </value>
            <value>
                <fullName>FIG - Financial Institutions</fullName>
            </value>
            <value>
                <fullName>FRG - FRG</fullName>
            </value>
            <value>
                <fullName>FS - Financial Sponsors</fullName>
            </value>
            <value>
                <fullName>FVA - FVA</fullName>
            </value>
            <value>
                <fullName>GEN - General</fullName>
            </value>
            <value>
                <fullName>GER - Generalist/REVS</fullName>
            </value>
            <value>
                <fullName>HC - Healthcare</fullName>
            </value>
            <value>
                <fullName>IFA - Illiquid Financial Assets</fullName>
            </value>
            <value>
                <fullName>IG - Industrials</fullName>
            </value>
            <value>
                <fullName>M&amp;A - Mergers &amp; Acquisitions</fullName>
            </value>
            <value>
                <fullName>O&amp;G - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>PFG - Private Funds Group</fullName>
            </value>
            <value>
                <fullName>POW - Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>PV - Portfolio Valuation</fullName>
            </value>
            <value>
                <fullName>RE - Real Estate Lodging and Leisure</fullName>
            </value>
            <value>
                <fullName>SOV - Sovereigns</fullName>
            </value>
            <value>
                <fullName>TAG - Tangible Asset Group</fullName>
            </value>
            <value>
                <fullName>TAS - Transaction Advisory Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>