force-app/main/default/objects/Industry__c/fields/Industry_Group_Text_Search__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Text_Search__c</fullName>
    <label>Industry Group Text Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>