force-app/main/default/objects/Industry__c/fields/Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sector__c</fullName>
    <formula>Industry_Group_REPORTING__c + &quot; - &quot; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Sector</label>
    <type>Text</type>
</CustomField>