force-app/main/default/objects/Industry__c/fields/Search_Index__c.field-meta.xml
<CustomField>
    <fullName>Search_Index__c</fullName>
    <label>Search Index</label>
    <length>3</length>
    <type>Text</type>
</CustomField>