force-app/main/default/objects/Industry__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>Contact__c</columns>
    <columns>Company__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Engagement__c</columns>
    <columns>NAME</columns>
    <columns>Industry_Group__c</columns>
    <columns>Industry_Group_REPORTING__c</columns>
    <columns>Industry_Umbrella__c</columns>
    <columns>Industry_Umbrella_REPORTING__c</columns>
    <columns>Industry_Type__c</columns>
    <columns>JDE_Industry_Code__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
</ListView>