force-app/main/default/objects/Industry__c/listViews/All_Active_Acct_Deal_Staff.listView-meta.xml
<ListView>
    <fullName>All_Active_Acct_Deal_Staff</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Industry_Group__c</columns>
    <columns>Industry_Group_REPORTING__c</columns>
    <columns>Industry_Umbrella__c</columns>
    <columns>Industry_Umbrella_REPORTING__c</columns>
    <columns>Industry_Type__c</columns>
    <columns>JDE_Industry_Code__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Industry_Type__c</field>
        <operation>includes</operation>
        <value>Account</value>
    </filters>
    <filters>
        <field>Industry_Type__c</field>
        <operation>includes</operation>
        <value>Opportunity</value>
    </filters>
    <filters>
        <field>Industry_Type__c</field>
        <operation>includes</operation>
        <value>Engagement</value>
    </filters>
    <filters>
        <field>Industry_Type__c</field>
        <operation>includes</operation>
        <value>Staff</value>
    </filters>
    <label>All Active Acct/Deal/Staff</label>
</ListView>