force-app/main/default/objects/Industry__c/listViews/Contact_Industries.listView-meta.xml
<ListView>
    <fullName>Contact_Industries</fullName>
    <columns>NAME</columns>
    <columns>Industry_Group__c</columns>
    <columns>Industry_Group_Text_Search__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contact Industries</label>
</ListView>