force-app/main/default/objects/Industry__c/listViews/Engagement_Industries.listView-meta.xml
<ListView>
    <fullName>Engagement_Industries</fullName>
    <columns>Industry_Group__c</columns>
    <columns>NAME</columns>
    <columns>Industry_Group_REPORTING__c</columns>
    <columns>Industry_Type__c</columns>
    <columns>Industry_Umbrella__c</columns>
    <columns>Industry_Umbrella_REPORTING__c</columns>
    <columns>JDE_Industry_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Industry_Type__c</field>
        <operation>includes</operation>
        <value>Engagement</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Engagement Industries</label>
</ListView>